--- a/NSSQjava-ver5.0/index.html
+++ b/NSSQjava-ver5.0/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <p>ぺぺぺぺぺ</p>
   <div class="float1">
     <h3>SRSじゃない世界樹の迷宮TRPG　ステータス計算機</h1>
       <input type="submit" id="dice_button" onclick="dice_action();" value="ダイスを振る" onclick="test_button();"><br>
