--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@
           </select>
         </td>
       </tr>
-      <tr>
 
-      </tr>
-      <th>クラス</th>
-      <td><select id="main_job_list" onChange="sta_make();"></select></td>
-      <th>サブクラス</th>
-      <td><select id="sub_job_list" onChange="sta_make();">
-          <option value="－" selected>－</option>
-        </select></td>
+      <tr>
+        <th>クラス</th>
+        <td><select id="main_job_list" onChange="sta_make();"></select></td>
+        <th>サブクラス</th>
+        <td><select id="sub_job_list" onChange="sta_make();">
+            <option value="－" selected>－</option>
+          </select></td>
       </tr>
 
       <tr>
@@ -86,8 +85,8 @@
         </select>
         <th>武器ランク</th>
         <td>
-        <select id="weapon_rank" onChange="sta_make();">
-        </select></td>
+          <select id="weapon_rank" onChange="sta_make();">
+          </select></td>
       </tr>
 
       <tr>
@@ -100,8 +99,8 @@
           </select></td>
         <th>防具ランク</th>
         <td>
-        <select id="armor_rank" onChange="sta_make();">
-        </select></td>
+          <select id="armor_rank" onChange="sta_make();">
+          </select></td>
       </tr>
 
       <tr>
@@ -111,8 +110,8 @@
           </select></td>
         <th>盾用ランク</th>
         <td>
-        <select id="other_rank" onChange="sta_make();">
-        </select></td>
+          <select id="other_rank" onChange="sta_make();">
+          </select></td>
       </tr>
 
       <tr>
@@ -158,6 +157,8 @@
   <div class="float4">
     <!-- 右側、出力ブロック  -->
     <button type="button" id="copy_button" onclick="copy();">結果をコピー</button>
+
+    <input type="checkbox" id="pallet_check" onChange="sta_make();">チャットパレット形式で出力
     <b></b><br><!-- 消すとレイアウトがなんかズレる  -->
     <textarea id="textarea1" rows="22" cols="50" spellcheck="false">ここに結果が表示されます</textarea><br>
 
